...
@Preview(showBackground = true)
@Composable
fun CallScreenActivePreview() {
    MaterialTheme {
        CallScreenContent(
            publicKey = "456",
            contact = Contact(name = "Bob", publicKey = "456"),
            name = "Bob",
            sendingAudio = true,
            speakerphoneOn = true,
            statusText = "03:45",
            hasMicPermission = true,
            onRequestMicPermission = {},
...
